ExtractFix_dataset/docker/jasper/testcases/cve_2016_9387/ubsan.txt
jpc_dec.c:1234:33: runtime error: signed integer overflow: 210 * -2147483646 cannot be represented in type 'int'
lt-imginfo: jas_seq.c:90: jas_seq2d_create: Assertion `xstart <= xend && ystart <= yend' failed.
